ceilometer (2013.2-0ubuntu3) UNRELEASED; urgency=low

  * debian/control:
    - Open icehouse release.
    - Renamed msgpack-python to python-msgpack.
    - Bump build dependency version for python-ceilometerclient,
      python-novaclient, python-keystoneclient, python-six,
      python-wsme.
  * debian/patches/fix-setup-requirements.patch: Refreshed.
  * debian/patches/skip-database-tests.patch: Refreshed.
  * debian/rules: Temporarily disable testsuite.

 -- Chuck Short <zulcss@ubuntu.com>  Mon, 25 Nov 2013 09:25:56 -0500

ceilometer (2013.2-0ubuntu1) saucy; urgency=low

  * New upstream release (LP: #1236462).

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 17 Oct 2013 09:38:31 -0400

ceilometer (2013.2~rc2-0ubuntu1) saucy; urgency=low

  * New upstream release candidate (LP: #1239156):
    - d/p/revert-keystone-compat.patch: Revert keystoneclient 0.4.0 compat
      fix as this causes test failures against 0.3.4.
  * d/control: Drop a3 from versioned dependency on python-oslo.config.

 -- James Page <james.page@ubuntu.com>  Mon, 14 Oct 2013 10:30:03 +0100

ceilometer (2013.2~rc1-0ubuntu1) saucy; urgency=low

  * debian/patches/fix-setup-requirements.patch: Dropped no longer
    needed.
  * debian/patches/skip-database.patch: Refreshed
  * debian/control:
    - Add versioned dependency for python-pbr.
    - Bump version dependency for python-webob.
    - Add versioned dependency for alembic.
    - Bump versioned dependency for python-sqlalchemy.
    - Add versioned dependency for python-pymongo.
    - Add versioned dependency for python-eventlet.
    - Dropped python-extras dependency.
    - Bump versioned dependency for python-flask.
    - Bump versioned dependency for python-stevedore.
    - Add versioned dependency for python-glanceclient.
    - Bump versioned dependency for python-novaclient.
    - Bump versioned dependency for python-keystoneclient.
    - Bump versioned dependency for python-ceilometerclient.
    - Add versioned dependency for python-lxml.